NIFI-15140 Removed unused cluster.protocol.is.secure property
- Removed documentation and example references to the unused application property

Signed-off-by: Pierre Villard <pierre.villard.fr@gmail.com>

This closes #10465.